// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Performance: metrics evaluates valid input (with lcp from all frames) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 375,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 26581,
  "firstCPUIdleTs": 176404642571,
  "firstContentfulPaint": 7729,
  "firstContentfulPaintTs": 176385791069,
  "firstMeaningfulPaint": 7729,
  "firstMeaningfulPaintTs": 176385791069,
  "interactive": 33916,
  "interactiveTs": 176411978114,
  "largestContentfulPaint": 10790,
  "largestContentfulPaintAllFrames": 41282,
  "largestContentfulPaintAllFramesTs": 176419343601,
  "largestContentfulPaintTs": 176388852160,
  "maxPotentialFID": 756,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 7502,
  "observedDomContentLoadedTs": 176385563980,
  "observedFirstContentfulPaint": 7729,
  "observedFirstContentfulPaintTs": 176385791069,
  "observedFirstMeaningfulPaint": 7729,
  "observedFirstMeaningfulPaintTs": 176385791069,
  "observedFirstPaint": 4370,
  "observedFirstPaintTs": 176382431417,
  "observedFirstVisualChange": 4347,
  "observedFirstVisualChangeTs": 176382408803,
  "observedLargestContentfulPaint": 10790,
  "observedLargestContentfulPaintAllFrames": 41282,
  "observedLargestContentfulPaintAllFramesTs": 176419343601,
  "observedLargestContentfulPaintTs": 176388852160,
  "observedLastVisualChange": 26349,
  "observedLastVisualChangeTs": 176404410803,
  "observedLoad": 25242,
  "observedLoadTs": 176403303397,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 176378061803,
  "observedSpeedIndex": 10040,
  "observedSpeedIndexTs": 176388101653,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 176378061803,
  "observedTraceEnd": 43239,
  "observedTraceEndTs": 176421300620,
  "speedIndex": 10040,
  "speedIndexTs": 176388101803,
  "totalBlockingTime": 3747,
}
`;

exports[`Performance: metrics evaluates valid input (with lcp) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 543,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 3677,
  "firstCPUIdleTs": undefined,
  "firstContentfulPaint": 2289,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 2758,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 4462,
  "interactiveTs": undefined,
  "largestContentfulPaint": 2758,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 1336,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 1513,
  "observedDomContentLoadedTs": 713038536140,
  "observedFirstContentfulPaint": 1122,
  "observedFirstContentfulPaintTs": 713038144775,
  "observedFirstMeaningfulPaint": 1122,
  "observedFirstMeaningfulPaintTs": 713038144775,
  "observedFirstPaint": 1122,
  "observedFirstPaintTs": 713038144775,
  "observedFirstVisualChange": 1105,
  "observedFirstVisualChangeTs": 713038128064,
  "observedLargestContentfulPaint": 1122,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": 713038144775,
  "observedLastVisualChange": 1722,
  "observedLastVisualChangeTs": 713038745064,
  "observedLoad": 2159,
  "observedLoadTs": 713039182071,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 713037023064,
  "observedSpeedIndex": 1393,
  "observedSpeedIndexTs": 713038416494,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 713037023064,
  "observedTraceEnd": 7416,
  "observedTraceEndTs": 713044439102,
  "speedIndex": 3681,
  "speedIndexTs": undefined,
  "totalBlockingTime": 1167,
}
`;

exports[`Performance: metrics evaluates valid input correctly (throttlingMethod=provided) 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 17,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 1582,
  "firstCPUIdleTs": 225415754204,
  "firstContentfulPaint": 499,
  "firstContentfulPaintTs": 225414670885,
  "firstMeaningfulPaint": 783,
  "firstMeaningfulPaintTs": 225414955343,
  "interactive": 1582,
  "interactiveTs": 225415754204,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 198,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 605,
  "speedIndexTs": 225414777015,
  "totalBlockingTime": 48,
}
`;

exports[`Performance: metrics evaluates valid input correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 78,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 3351,
  "firstCPUIdleTs": undefined,
  "firstContentfulPaint": 1337,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 1553,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 3427,
  "interactiveTs": undefined,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 396,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 1676,
  "speedIndexTs": undefined,
  "totalBlockingTime": 726,
}
`;
